# DjangoAndDockerSetup

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: checks.yml
src/: .mypy.ini
src/app/: settings.py
src/core/: admin.py  models.py
src/core/management/commands/: coverage.py
src/core/tests/: test_commands.py
