[tool.poetry]
name = "main-backend"
version = "0.1.0"
description = ""
authors = ["witekpiotrdev@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.2"
djangorestframework = "^3.14"
ipython = "^8.6"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"
pre-commit = "^2.20"
coverage = "^6.5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"